--- a/style/global.css
+++ b/style/global.css
@@ -703,6 +703,23 @@ span.title-empty {
 	color: #ff0000;
 }
 
+.window .tabs {
+	list-style: none;
+	margin: 0; padding: 0;
+	clear: both; overflow: auto;
+}
+
+.window .tabs li {
+	list-style: none;
+	margin: 0 0.2em; padding: 0.5em 1em;
+	float: left; 
+	cursor: pointer;
+}
+
+.window div.tab-content {
+	clear: both; overflow: auto; width: 100%;
+}
+
 #info_form label, #admin_form label {
 	display: block;
 	float: left;
