--- a/style/global.css
+++ b/style/global.css
@@ -341,25 +341,26 @@ div.message p.message-desc, div.message p.message-link {
 	cursor: pointer;
 }
 
-#editor_save {
+#editor-save {
 	position: relative;
 	background: transparent url('../images/editor-save.gif') center top no-repeat;
 	margin: 10px 0 20px 0; padding: 0;
 	width: 900px; z-index: 2;
 }
 
-#editor_save_placeholder {
+#editor-save-placeholder {
 	margin: 10px 0 20px 0; padding: 0;
+	display: none;
 }
 
-#editor_save p {
+#editor-save p {
 	position: relative; top: 10px;
 	background: transparent url('../images/editor-save.gif') center bottom no-repeat;
 	margin: 0; padding: 0 0.5em 10px 0.5em;
 	overflow: auto; clear: both;
 }
 
-#editor_save p button {
+#editor-save p button {
 	float: right;
 }
 
