--- a/style/language-zh-TW.css
+++ b/style/language-zh-TW.css
@@ -14,6 +14,7 @@ input, select, textarea, button, option, optgroup,
 
 body {
 	font-size: 0.92em 
+	line-height:135%;
 }
 
 input, select, textarea, button, option, optgroup {
