--- a/style/global.css
+++ b/style/global.css
@@ -578,8 +578,9 @@ span.title-empty {
 
 #features .feature p {
 	position: absolute;
+	font-size:14px;
 	margin: 0; padding: 0;
-	top: 105px; left: 40px;
+	top: 100px; left: 40px;
 	width: 230px; height: 125px;
 }
 
