--- a/style/global.css
+++ b/style/global.css
@@ -675,7 +675,7 @@ span.title-empty {
 }
 
 #groups-title p, #groups-tail p {
-	margin: 0.5em 0.5em 0 0.5em;
+	margin:0.5em 1.5em 0;
 }
 
 #groups-title {
